OCaml 4.10 maintenance branch
-----------------------------

### Bug fixes:

- #9326, #10125: Gc.set incorrectly handles the three `custom_*` fields,
  causing a performance regression
  (report by Emilio Jesús Gallego Arias, analysis and fix by Stephen Dolan,
   code by Xavier Leroy, review by Hugo Heuzard and Gabriel Scherer)

- #10250, #10266: Dynamically allocate alternate signal stacks to
  accommodate changes in Glibc 2.34.
  (Xavier Leroy, reports by Tomasz Kłoczko and R.W.M. Jones, review by Anil
   Madhavapeddy, Stephen Dolan, and Florian Angeletti)

- #10698, #10726, #10891: Free the alternate signal stack when the main OCaml
  code or an OCaml thread stops.
  (Xavier Leroy, review by David Allsopp, Florian Angeletti and Damien Doligez)

OCaml 4.10.2 (8 December 2020)
------------------------------

### Build system:

- #9938, #9939: Define __USE_MINGW_ANSI_STDIO=0 for the mingw-w64 ports to
  prevent their C99-compliant snprintf conflicting with ours.
  (David Allsopp, report by Michael Soegtrop, review by Xavier Leroy)

### Supported platforms:

- #9699, #10026: add support for iOS and macOS on ARM 64 bits
  Backported from OCaml 4.12.0
  (GitHub user @EduardoRFS, review by Xavier Leroy, Nicolás Ojeda Bär
   and Anil Madhavapeddy, additional testing by Michael Schmidt)

### Code generation and optimization

- #9752, #10026: Revised handling of calling conventions for
  external C functions.
  Provide a more precise description of the types of unboxed arguments,
  so that the ARM64 iOS/macOS calling conventions can be honored.
  Backported from OCaml 4.12.0
  (Xavier Leroy, review by Mark Shinwell and Github user @EduardoRFS)

- #9969, #9981: Added mergeable flag to ELF sections containing mergeable
  constants.  Fixes compatibility with the integrated assembler in clang 11.0.0.
  Backported from OCaml 4.12.0
  (Jacob Young, review by Nicolás Ojeda Bär)

OCaml 4.10.1 (20 August 2020)
-----------------------------

### Runtime system:
